<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="252dp"
        android:layout_height="129dp"

        android:layout_marginTop="21dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/peteanux_logo" />


    <EditText
        android:id="@+id/etEmail"
        android:layout_width="219dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/EmailHint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/etREmail"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:background="@android:color/background_light" />

    <EditText
        android:id="@+id/etREmail"
        android:layout_width="219dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/ReenterEmailHint"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:background="@android:color/background_light" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etRPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/passwordHint" />

    <EditText
        android:id="@+id/etRPassword"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etName"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/RPasswordHint" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/etFamily"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/NameHint" />

    <EditText
        android:id="@+id/etFamily"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/chbTerms"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/FamilyHint" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="224dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_red_dark"
        android:text="Sign up"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <CheckBox
        android:id="@+id/chbTerms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/acceptTermsAndConditions"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/btnSignup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>