<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivationActivity"
    android:background="@drawable/background">


        <TextView
            android:id="@+id/txtValidationCodeHint"
            android:layout_width="284dp"
            android:layout_height="44dp"
            android:layout_marginTop="24dp"
            android:text="@string/txtActivationCodeHint"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="252dp"
            android:layout_height="129dp"

            android:layout_marginTop="21dp"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/peteanux_logo" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="222dp"
            android:layout_height="39dp"
            android:layout_marginBottom="36dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/SubmitButton"
            android:textColor="@android:color/background_light"
            android:textColorLink="@android:color/background_light"
            app:layout_constraintBottom_toTopOf="@+id/txtDidNotRcvCode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etActivationCode" />

        <TextView
            android:id="@+id/txtDidNotRcvCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="84dp"
            android:text="@string/txtDidNotRcvCode"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.572"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/etActivationCode"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:hint="@string/etActivationCodeHint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtValidationCodeHint" />

</android.support.constraint.ConstraintLayout>