<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="252dp"
        android:layout_height="129dp"
        android:layout_marginTop="21dp"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/peteanux_logo" />


    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="219dp"
        android:layout_height="26dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/OldPassword"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/etNewPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:background="@android:color/background_light" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="219dp"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/NewPassword"
        android:inputType="textPassword"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="@android:color/background_dark"
        app:layout_constraintBottom_toTopOf="@+id/etRepeatNewPassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:background="@android:color/background_light" />

    <EditText
        android:id="@+id/etRepeatNewPassword"
        android:layout_width="219dp"
        android:layout_height="25dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textColorLink="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnChangePassword"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:hint="@string/RepeatNewPassword" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="224dp"
        android:layout_height="38dp"
        android:layout_marginBottom="88dp"
        android:background="@android:color/holo_green_light"
        android:text="@string/change_password"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>